--- a/testing/requirements.test.txt
+++ b/testing/requirements.test.txt
@@ -3,13 +3,14 @@ pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
 pytest-xdist==3.3.1
-requests==2.31.0
+requests==2.32.4
 httpx==0.25.2
 playwright==1.40.0
 psycopg2-binary==2.9.9
 sqlalchemy==2.0.23
 pydantic==2.5.0
-fastapi==0.104.1
+fastapi==0.116.1
+starlette==0.47.2
 uvicorn==0.24.0
 
 # Load testing
